[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
h3 = "0.0.6"
h3-quinn = "0.0.7"
bytes = "1.0"
http = "1.2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.3"
rustls = "0.23"
quinn = "0.11.6"
serde_json = "1.0"
rustls-pki-types = "1.0"
urlencoding = "2.1.3"
brotlic = "0.8.2"

